--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "app"
 version = "0.1.0"
 description = ""
-authors = ["Ming Zhu ming.zhu@zoom.us"]
+authors = ["Ming Zhu zmvictorcruse@gmail.com"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
